[tool.poetry]
name = "llm-similarity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.6.1"
matplotlib = "^3.8.4"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
dask = "^2024.4.1"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
transformers = "^4.39.3"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
